--- a/app/src/main/res/raw/about.html
+++ b/app/src/main/res/raw/about.html
@@ -9,10 +9,13 @@
 <ul>
     <li>AppCompat Support & Design Library</li>
     <li>Google Play Services library</li>
-    <li><a href="https://github.com/intuit/sdp">Intuit SDP library</a> (MIT License)</li>
-    <li><a href="https://github.com/scribejava/scribejava">ScribeJava OAuth library</a> (MIT License)</li>
-    <li><a href="https://github.com/square/picasso">Picasso library</a> (Apache License v2)</li>
-    <li><a href="https://github.com/SufficientlySecure/html-textview">HtmlTextView library</a> (Apache License v2)</li>
+    <li><a href="https://github.com/intuit/sdp">Intuit SDP</a> (MIT License)</li>
+    <li><a href="https://github.com/scribejava/scribejava">ScribeJava OAuth</a> (MIT License)</li>
+    <li><a href="https://github.com/square/picasso">Picasso</a> (Apache License v2)</li>
+    <li><a href="https://github.com/SufficientlySecure/html-textview">HtmlTextView</a> (Apache License v2)</li>
+    <li><a href="https://github.com/deano2390/MaterialShowcaseView">MaterialShowcaseView</a> (Apache License v2)</li>
+    <li><a href="https://github.com/arimorty/floatingsearchview/">Floating Search View</a> (Apache License v2)</li>
+    <li><a href="https://github.com/castorflex/SmoothProgressBar">Smooth Progress Bar</a> (Apache License v2)</li>
     <li>Icons used from <a href="https://materialdesignicons.com">materialdesignicons.com</a></li>
 </ul>
 </body>
