Apply finishing touches on release 1.2

--- a/app/src/main/res/raw/about.html
+++ b/app/src/main/res/raw/about.html
@@ -16,6 +16,9 @@
     <li><a href="https://github.com/deano2390/MaterialShowcaseView">MaterialShowcaseView</a> (Apache License v2)</li>
     <li><a href="https://github.com/arimorty/floatingsearchview/">Floating Search View</a> (Apache License v2)</li>
     <li><a href="https://github.com/castorflex/SmoothProgressBar">Smooth Progress Bar</a> (Apache License v2)</li>
+    <li><a href="https://github.com/googlesamples/easypermissions">EasyPermissions</a> (Apache
+        License v2)
+    </li>
     <li>Icons used from <a href="https://materialdesignicons.com">materialdesignicons.com</a></li>
 </ul>
 </body>
